feat(sprint-5): MLlib multiclase + grafo Metro + ADR 07 + Trino + make all